# homelab

./: .editorconfig  .envrc  .gitignore  .gitmodules  .sops.yaml  .yamllint  Makefile  README.md  flake.nix  host.mk  k3d.yaml  kubeconfig.yaml  kustomize.patch  mise.toml  renovate.json  renovate.json5  system_maintenance.sh  test.bu  wg-client.sh
.github/workflows/: check.yaml  deploy_test.yaml  flakes.yaml  hadolint.yaml  homelab_bot.yaml  ignition.yaml  lint.yaml  renovate.yaml  shellcheck.yaml  test.yaml  yamllint.yaml
cluster/argocd/: Chart.yaml  (+3 more)
configurations/: gitops-upgrade.sh  gitops.nix  hosts.nix  nix.nix  packages.nix  ssh.nix  user.nix
host/: authorized_keys  dnsmasq  fstab  zshrc
hosts/: autoupdates.bu  boltzmann.bu  i18n.bu  nuke.bu  overlays.bu  virtual.bu  wg0.enc.conf  wireguard.bu  wireguard.yaml
k3d/: Dockerfile  config.yaml
modules/: autoupdates.bu  base.bu  defaults.nix  dns.nix  general.nix  gitops.nix  i18n.bu  overlays.bu  user.bu  zsh.nix
old_config/: README.md  flake.nix  renovate.json
scripts/: init_nix_toolbox.sh  postInstall.sh  startup.sh
services/: .env  .env.secret.enc  .yamllint  dco.sh  deploy.sh  docker-compose.yml  secrets.yaml
services/qobuz-dl/src/: Dockerfile  Makefile  README.md  pyproject.toml  server.py
setup/: INSTALL.md  prepare_disk.sh  setup_disc.sh  setup_nixos.sh  setup_system.sh
snowflake/: gitops-upgrade.sh  home.nix
snowflake-configuration/: configuration.nix  gitops-upgrade.sh  nix.nix  timer.nix
talos/: README.md
test/: README.md  controlplane.yaml  kubeconfig  lh-ext.yaml  talosconfig
(+691 files in other folders)
