[tool.poetry]
name = "qobuz-dl-server"
version = "0.0.1"
description = "A REST API to download music from qobuz"
authors = ["clemak27 <clemak27@mailbox.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
qobuz-dl = "0.9.9.7"
fastapi = {extras = ["all"], version = "0.85.0"}


[build-system]
requires = ["poetry>=1.2.1"]
build-backend = "poetry.core.masonry.api"
